Fix notes app core working on mobile device

--- a/clientapp/src/components/Core/NotesList.css
+++ b/clientapp/src/components/Core/NotesList.css
@@ -24,6 +24,10 @@
   cursor: grab;
 }
 
+.draggable-item {
+  touch-action: manipulation;
+}
+
 .note:active {
   cursor: grabbing;
 }
