--- a/clientapp/src/components/Core/Search.css
+++ b/clientapp/src/components/Core/Search.css
@@ -17,8 +17,15 @@
   font-family: var(--primary-font-name);
   font-size: 1.3rem;
   width: 100%;
-  height: 30px;
-  margin-left: 10px;
+  margin-left: 0.4rem;
+}
+
+.search .search-icons {
+  font-size: 1.3rem;
+}
+
+.search .sort-button {
+  font-size: 0.8rem;
 }
 
 .search input:focus {
@@ -39,4 +46,21 @@
   border: none;
   cursor: pointer;
   cursor: #333;
+}
+
+@media screen and (max-width: 450px) { 
+  .search input {
+    font-size: 0.95rem;
+  }
+  .search {
+    padding: 5px;
+  }
+  .search .sort-button {
+    font-size: 0.6rem;
+  }
+
+  .search .search-icons {
+    font-size: 1.1rem;
+  }
+
 }
